// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/license_settings/LicenseSettings load screen after upgrading 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Edition and License"
    id="admin.license.title"
    values={Object {}}
  />
  <div
    className="admin-console__wrapper"
  >
    <div
      className="admin-console__content"
    >
      <form
        className="form-horizontal"
        role="form"
      >
        <RenewLicenseCard
          isDisabled={false}
          isLicenseExpired={false}
          license={
            Object {
              "Company": "MatterFOSS",
              "ExpiresAt": "1620335443650",
              "IsLicensed": "true",
              "IssuedAt": "1517714643650",
              "Name": "LicenseName",
              "SkuShortName": "SkuName",
              "StartsAt": "1517714643650",
              "Users": "100",
            }
          }
          totalUsers={10}
        />
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Edition: "
              id="admin.license.edition"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <p>
                MatterFOSS.
              </p>
              <div>
                <p>
                  <injectIntl(FormattedMarkdownMessage)
                    defaultMessage="You have upgraded your binary to mattermost enterprise, please restart the server to start using the new binary. You can do it right here:"
                    id="admin.license.upgraded-restart"
                  />
                </p>
                <p>
                  <button
                    className="btn btn-primary"
                    onClick={[Function]}
                    type="button"
                  >
                    <LoadingWrapper
                      loading={false}
                      text="Restarting"
                    >
                      <FormattedMessage
                        defaultMessage="Restart Server"
                        id="admin.license.enterprise.restart"
                      />
                    </LoadingWrapper>
                  </button>
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="License: "
              id="admin.license.type"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <p>
                When using MatterFOSS Team Edition, the software is offered under a MatterFOSS MIT Compiled License. See MIT-COMPILED-LICENSE.md in your root install directory for details.
              </p>
              <p>

              </p>
              <p>
                See NOTICE.txt for information about open source software used in the system.
              </p>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Enterprise Edition License:"
              id="admin.license.enterprise-edition-license"
            />
          </label>
          <div
            className="col-sm-8 enterprise-license-text"
          >
            <div>
              <p>
                The MatterFOSS (EE) license (the “EE License”)
              </p>
              <p>
                Copyright (c) 2016-present MatterFOSS
              </p>
              <p>
                The subscription-only features of the MatterFOSS software and associated documentation files (the "Software") may only be used if you (and any entity that you represent) (i) have agreed to, and are in compliance with, the MatterFOSS Subscription Terms of Service, available at https://about.mattermost.com/enterprise-edition-terms/ (the “EE Terms”), and (ii) otherwise have a valid MatterFOSS subscription for the correct features, number of user seats and instances of MatterFOSS that you are running, accessing, or using.  You may, however, utilize the free version of the Software (with several features not enabled) under this license without a license key or subscription provided that you otherwise comply with the terms and conditions of this Agreement. Subject to the foregoing, except as explicitly permitted in the EE Terms, it is forbidden to copy, merge, modify, publish, distribute, sublicense, stream, perform, display, create derivative works of and/or sell the Software in either source or executable form without written agreement from Mattermost.  Notwithstanding anything to the contrary, free versions of the Software are provided “AS-IS” without indemnification, support, or warranties of any kind, expressed or implied. You assume all risk associated with any use of free versions of the Software.
              </p>
              <p>
                EXCEPT AS OTHERWISE SET FORTH IN A BINDING WRITTEN AGREEMENT BETWEEN YOU AND MATTERFOSS, THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
              </p>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/license_settings/LicenseSettings load screen while upgrading 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Edition and License"
    id="admin.license.title"
    values={Object {}}
  />
  <div
    className="admin-console__wrapper"
  >
    <div
      className="admin-console__content"
    >
      <form
        className="form-horizontal"
        role="form"
      >
        <RenewLicenseCard
          isDisabled={false}
          isLicenseExpired={false}
          license={
            Object {
              "Company": "MatterFOSS",
              "ExpiresAt": "1620335443650",
              "IsLicensed": "true",
              "IssuedAt": "1517714643650",
              "Name": "LicenseName",
              "SkuShortName": "SkuName",
              "StartsAt": "1517714643650",
              "Users": "100",
            }
          }
          totalUsers={10}
        />
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Edition: "
              id="admin.license.edition"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <p>
                MatterFOSS.
              </p>
              <div>
                <p>
                  <button
                    className="btn btn-primary"
                    onClick={[Function]}
                    type="button"
                  >
                    <LoadingWrapper
                      loading={true}
                      text={
                        <FormattedMessage
                          defaultMessage="Upgrading {percentage}%"
                          id="admin.license.enterprise.upgrading"
                          values={
                            Object {
                              "percentage": 42,
                            }
                          }
                        />
                      }
                    >
                      <FormattedMessage
                        defaultMessage="Upgrade to Enterprise Edition"
                        id="admin.license.enterprise.upgrade"
                      />
                    </LoadingWrapper>
                  </button>
                </p>
                <p
                  className="upgrade-legal-terms"
                >
                  <injectIntl(FormattedMarkdownMessage)
                    defaultMessage=""
                    id="admin.license.enterprise.upgrade.accept-terms"
                  />
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="License: "
              id="admin.license.type"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <p>
                When using MatterFOSS Team Edition, the software is offered under a MatterFOSS MIT Compiled License. See MIT-COMPILED-LICENSE.md in your root install directory for details.
              </p>
              <p>

              </p>
              <p>
                See NOTICE.txt for information about open source software used in the system.
              </p>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Enterprise Edition License:"
              id="admin.license.enterprise-edition-license"
            />
          </label>
          <div
            className="col-sm-8 enterprise-license-text"
          >
            <div>
              <p>
                The MatterFOSS (EE) license (the “EE License”)
              </p>
              <p>
                Copyright (c) 2016-present MatterFOSS
              </p>
              <p>
                The subscription-only features of the MatterFOSS software and associated documentation files (the "Software") may only be used if you (and any entity that you represent) (i) have agreed to, and are in compliance with, the MatterFOSS Subscription Terms of Service, available at https://about.mattermost.com/enterprise-edition-terms/ (the “EE Terms”), and (ii) otherwise have a valid MatterFOSS subscription for the correct features, number of user seats and instances of MatterFOSS that you are running, accessing, or using.  You may, however, utilize the free version of the Software (with several features not enabled) under this license without a license key or subscription provided that you otherwise comply with the terms and conditions of this Agreement. Subject to the foregoing, except as explicitly permitted in the EE Terms, it is forbidden to copy, merge, modify, publish, distribute, sublicense, stream, perform, display, create derivative works of and/or sell the Software in either source or executable form without written agreement from Mattermost.  Notwithstanding anything to the contrary, free versions of the Software are provided “AS-IS” without indemnification, support, or warranties of any kind, expressed or implied. You assume all risk associated with any use of free versions of the Software.
              </p>
              <p>
                EXCEPT AS OTHERWISE SET FORTH IN A BINDING WRITTEN AGREEMENT BETWEEN YOU AND MATTERFOSS, THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
              </p>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/license_settings/LicenseSettings should match snapshot enterprise build with license 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Edition and License"
    id="admin.license.title"
    values={Object {}}
  />
  <div
    className="admin-console__wrapper"
  >
    <div
      className="admin-console__content"
    >
      <form
        className="form-horizontal"
        role="form"
      >
        <RenewLicenseCard
          isDisabled={false}
          isLicenseExpired={false}
          license={
            Object {
              "Company": "MatterFOSS",
              "ExpiresAt": "1620335443650",
              "IsLicensed": "true",
              "IssuedAt": "1517714643650",
              "Name": "LicenseName",
              "SkuShortName": "SkuName",
              "StartsAt": "1517714643650",
              "Users": "100",
            }
          }
          totalUsers={10}
        />
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Edition: "
              id="admin.license.edition"
            />
          </label>
          <div
            className="col-sm-8"
          >
            MatterFOSS - Licensed under the AGPL
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="License: "
              id="admin.license.type"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <p>
                This software is offered under the GNU Affero GPL 3.0. You are reminded that under the terms of the AGPL, providing a this web service constitutes redistribution of the software and therefore any changes that you make to the software must be made available to your users in source code form.
              </p>
              <br />
              See also: 
              <a
                href="https://www.gnu.org/licenses/agpl-3.0.en.html"
                rel="noopener noreferrer"
                target="_blank"
              >
                AGPL License text
              </a>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        />
      </form>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/license_settings/LicenseSettings should match snapshot enterprise build with license and isDisabled set to true 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Edition and License"
    id="admin.license.title"
    values={Object {}}
  />
  <div
    className="admin-console__wrapper"
  >
    <div
      className="admin-console__content"
    >
      <form
        className="form-horizontal"
        role="form"
      >
        <RenewLicenseCard
          isDisabled={true}
          isLicenseExpired={false}
          license={
            Object {
              "Company": "MatterFOSS",
              "ExpiresAt": "1620335443650",
              "IsLicensed": "true",
              "IssuedAt": "1517714643650",
              "Name": "LicenseName",
              "SkuShortName": "SkuName",
              "StartsAt": "1517714643650",
              "Users": "100",
            }
          }
          totalUsers={10}
        />
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Edition: "
              id="admin.license.edition"
            />
          </label>
          <div
            className="col-sm-8"
          >
            MatterFOSS - Licensed under the AGPL
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="License: "
              id="admin.license.type"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <p>
                This software is offered under the GNU Affero GPL 3.0. You are reminded that under the terms of the AGPL, providing a this web service constitutes redistribution of the software and therefore any changes that you make to the software must be made available to your users in source code form.
              </p>
              <br />
              See also: 
              <a
                href="https://www.gnu.org/licenses/agpl-3.0.en.html"
                rel="noopener noreferrer"
                target="_blank"
              >
                AGPL License text
              </a>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        />
      </form>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/license_settings/LicenseSettings should match snapshot enterprise build with license and upgraded from TE 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Edition and License"
    id="admin.license.title"
    values={Object {}}
  />
  <div
    className="admin-console__wrapper"
  >
    <div
      className="admin-console__content"
    >
      <form
        className="form-horizontal"
        role="form"
      >
        <RenewLicenseCard
          isDisabled={false}
          isLicenseExpired={false}
          license={
            Object {
              "Company": "MatterFOSS",
              "ExpiresAt": "1620335443650",
              "IsLicensed": "true",
              "IssuedAt": "1517714643650",
              "Name": "LicenseName",
              "SkuShortName": "SkuName",
              "StartsAt": "1517714643650",
              "Users": "100",
            }
          }
          totalUsers={10}
        />
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Edition: "
              id="admin.license.edition"
            />
          </label>
          <div
            className="col-sm-8"
          >
            MatterFOSS - Licensed under the AGPL
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="License: "
              id="admin.license.type"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <br />
              See also: 
              <a
                href="https://www.gnu.org/licenses/agpl-3.0.en.html"
                rel="noopener noreferrer"
                target="_blank"
              >
                AGPL License text
              </a>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        />
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Enterprise Edition License:"
              id="admin.license.enterprise-edition-license"
            />
          </label>
          <div
            className="col-sm-8 enterprise-license-text"
          >
            <div>
              <p>
                The MatterFOSS (EE) license (the “EE License”)
              </p>
              <p>
                Copyright (c) 2016-present MatterFOSS
              </p>
              <p>
                The subscription-only features of the MatterFOSS software and associated documentation files (the "Software") may only be used if you (and any entity that you represent) (i) have agreed to, and are in compliance with, the MatterFOSS Subscription Terms of Service, available at https://about.mattermost.com/enterprise-edition-terms/ (the “EE Terms”), and (ii) otherwise have a valid MatterFOSS subscription for the correct features, number of user seats and instances of MatterFOSS that you are running, accessing, or using.  You may, however, utilize the free version of the Software (with several features not enabled) under this license without a license key or subscription provided that you otherwise comply with the terms and conditions of this Agreement. Subject to the foregoing, except as explicitly permitted in the EE Terms, it is forbidden to copy, merge, modify, publish, distribute, sublicense, stream, perform, display, create derivative works of and/or sell the Software in either source or executable form without written agreement from Mattermost.  Notwithstanding anything to the contrary, free versions of the Software are provided “AS-IS” without indemnification, support, or warranties of any kind, expressed or implied. You assume all risk associated with any use of free versions of the Software.
              </p>
              <p>
                EXCEPT AS OTHERWISE SET FORTH IN A BINDING WRITTEN AGREEMENT BETWEEN YOU AND MATTERFOSS, THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
              </p>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/license_settings/LicenseSettings should match snapshot enterprise build with trial license 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Edition and License"
    id="admin.license.title"
    values={Object {}}
  />
  <div
    className="admin-console__wrapper"
  >
    <div
      className="admin-console__content"
    >
      <form
        className="form-horizontal"
        role="form"
      >
        <TrialLicenseCard
          license={
            Object {
              "ExpiresAt": "1620335443650",
              "IsLicensed": "true",
              "IssuedAt": "1617714643650",
              "StartsAt": "1617714643650",
            }
          }
        />
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Edition: "
              id="admin.license.edition"
            />
          </label>
          <div
            className="col-sm-8"
          >
            MatterFOSS - Licensed under the AGPL
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="License: "
              id="admin.license.type"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <p>
                This software is offered under the GNU Affero GPL 3.0. You are reminded that under the terms of the AGPL, providing a this web service constitutes redistribution of the software and therefore any changes that you make to the software must be made available to your users in source code form.
              </p>
              <br />
              See also: 
              <a
                href="https://www.gnu.org/licenses/agpl-3.0.en.html"
                rel="noopener noreferrer"
                target="_blank"
              >
                AGPL License text
              </a>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        />
      </form>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/license_settings/LicenseSettings should match snapshot enterprise build without license 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Edition and License"
    id="admin.license.title"
    values={Object {}}
  />
  <div
    className="admin-console__wrapper"
  >
    <div
      className="admin-console__content"
    >
      <form
        className="form-horizontal"
        role="form"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Edition: "
              id="admin.license.edition"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              MatterFOSS. A license is required to unlock enterprise features
              <p
                className="trial"
              >
                <button
                  className="btn btn-primary"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <LoadingWrapper
                    loading={false}
                    text="Getting trial"
                  >
                    <FormattedMessage
                      defaultMessage="Start trial"
                      id="admin.license.trial-request.submit"
                    />
                  </LoadingWrapper>
                </button>
              </p>
              <p
                className="trial-legal-terms"
              >
                <injectIntl(FormattedMarkdownMessage)
                  defaultMessage="By clicking **Start trial**, I agree to the [MatterFOSS Software Evaluation Agreement](!https://mattermost.com/software-evaluation-agreement/), [Privacy Policy](!https://mattermost.com/privacy-policy/), and receiving product emails."
                  id="admin.license.trial-request.accept-terms"
                />
              </p>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="License: "
              id="admin.license.type"
            />
          </label>
          <div
            className="col-sm-8"
          >
            This software is offered under the GNU Affero GPL 3.0. You are reminded that under the terms of the AGPL, providing a this web service constitutes redistribution of the software and therefore any changes that you make to the software must be made available to your users in source code form.
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="License Key: "
              id="admin.license.key"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div
              className="file__upload"
            >
              <button
                className="btn btn-primary"
                type="button"
              >
                <FormattedMessage
                  defaultMessage="Choose File"
                  id="admin.license.choose"
                />
              </button>
              <input
                accept=".mattermost-license"
                disabled={false}
                onChange={[Function]}
                type="file"
              />
            </div>
            <button
              className="btn"
              disabled={true}
              id="upload-button"
              onClick={[Function]}
            >
              <FormattedMessage
                defaultMessage="Upload"
                id="admin.license.upload"
              />
            </button>
            <div
              className="help-text m-0"
            >
              <FormattedMessage
                defaultMessage="No file uploaded"
                id="admin.license.noFile"
              />
            </div>
            <br />
            <p
              className="help-text m-0"
            >
              <injectIntl(FormattedMarkdownMessage)
                defaultMessage="Upload a license key for MatterFOSS to upgrade this server. [Visit us online](!http://mattermost.com) to learn more about the benefits of Enterprise Edition or to purchase a key."
                id="admin.license.uploadDesc"
              />
            </p>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/license_settings/LicenseSettings should match snapshot enterprise build without license and upgrade from TE 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Edition and License"
    id="admin.license.title"
    values={Object {}}
  />
  <div
    className="admin-console__wrapper"
  >
    <div
      className="admin-console__content"
    >
      <form
        className="form-horizontal"
        role="form"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Edition: "
              id="admin.license.edition"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              MatterFOSS. A license is required to unlock enterprise features
              <p
                className="trial"
              >
                <button
                  className="btn btn-primary"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <LoadingWrapper
                    loading={false}
                    text="Getting trial"
                  >
                    <FormattedMessage
                      defaultMessage="Start trial"
                      id="admin.license.trial-request.submit"
                    />
                  </LoadingWrapper>
                </button>
              </p>
              <p
                className="trial-legal-terms"
              >
                <injectIntl(FormattedMarkdownMessage)
                  defaultMessage="By clicking **Start trial**, I agree to the [MatterFOSS Software Evaluation Agreement](!https://mattermost.com/software-evaluation-agreement/), [Privacy Policy](!https://mattermost.com/privacy-policy/), and receiving product emails."
                  id="admin.license.trial-request.accept-terms"
                />
              </p>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="License: "
              id="admin.license.type"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <p>

              </p>
              <p>
                See NOTICE.txt for information about open source software used in the system.
              </p>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="License Key: "
              id="admin.license.key"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div
              className="file__upload"
            >
              <button
                className="btn btn-primary"
                type="button"
              >
                <FormattedMessage
                  defaultMessage="Choose File"
                  id="admin.license.choose"
                />
              </button>
              <input
                accept=".mattermost-license"
                disabled={false}
                onChange={[Function]}
                type="file"
              />
            </div>
            <button
              className="btn"
              disabled={true}
              id="upload-button"
              onClick={[Function]}
            >
              <FormattedMessage
                defaultMessage="Upload"
                id="admin.license.upload"
              />
            </button>
            <div
              className="help-text m-0"
            >
              <FormattedMessage
                defaultMessage="No file uploaded"
                id="admin.license.noFile"
              />
            </div>
            <br />
            <p
              className="help-text m-0"
            >
              <injectIntl(FormattedMarkdownMessage)
                defaultMessage="Upload a license key for MatterFOSS to upgrade this server. [Visit us online](!http://mattermost.com) to learn more about the benefits of Enterprise Edition or to purchase a key."
                id="admin.license.uploadDesc"
              />
            </p>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Enterprise Edition License:"
              id="admin.license.enterprise-edition-license"
            />
          </label>
          <div
            className="col-sm-8 enterprise-license-text"
          >
            <div>
              <p>
                The MatterFOSS (EE) license (the “EE License”)
              </p>
              <p>
                Copyright (c) 2016-present MatterFOSS
              </p>
              <p>
                The subscription-only features of the MatterFOSS software and associated documentation files (the "Software") may only be used if you (and any entity that you represent) (i) have agreed to, and are in compliance with, the MatterFOSS Subscription Terms of Service, available at https://about.mattermost.com/enterprise-edition-terms/ (the “EE Terms”), and (ii) otherwise have a valid MatterFOSS subscription for the correct features, number of user seats and instances of MatterFOSS that you are running, accessing, or using.  You may, however, utilize the free version of the Software (with several features not enabled) under this license without a license key or subscription provided that you otherwise comply with the terms and conditions of this Agreement. Subject to the foregoing, except as explicitly permitted in the EE Terms, it is forbidden to copy, merge, modify, publish, distribute, sublicense, stream, perform, display, create derivative works of and/or sell the Software in either source or executable form without written agreement from Mattermost.  Notwithstanding anything to the contrary, free versions of the Software are provided “AS-IS” without indemnification, support, or warranties of any kind, expressed or implied. You assume all risk associated with any use of free versions of the Software.
              </p>
              <p>
                EXCEPT AS OTHERWISE SET FORTH IN A BINDING WRITTEN AGREEMENT BETWEEN YOU AND MATTERFOSS, THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
              </p>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/license_settings/LicenseSettings should match snapshot team edition build with license 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Edition and License"
    id="admin.license.title"
    values={Object {}}
  />
  <div
    className="admin-console__wrapper"
  >
    <div
      className="admin-console__content"
    >
      <form
        className="form-horizontal"
        role="form"
      >
        <RenewLicenseCard
          isDisabled={false}
          isLicenseExpired={false}
          license={
            Object {
              "Company": "MatterFOSS",
              "ExpiresAt": "1620335443650",
              "IsLicensed": "true",
              "IssuedAt": "1517714643650",
              "Name": "LicenseName",
              "SkuShortName": "SkuName",
              "StartsAt": "1517714643650",
              "Users": "100",
            }
          }
          totalUsers={10}
        />
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Edition: "
              id="admin.license.edition"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <p>
                MatterFOSS.
              </p>
              <div>
                <p>
                  <button
                    className="btn btn-primary"
                    onClick={[Function]}
                    type="button"
                  >
                    <LoadingWrapper
                      loading={false}
                      text={
                        <FormattedMessage
                          defaultMessage="Upgrading {percentage}%"
                          id="admin.license.enterprise.upgrading"
                          values={
                            Object {
                              "percentage": 0,
                            }
                          }
                        />
                      }
                    >
                      <FormattedMessage
                        defaultMessage="Upgrade to Enterprise Edition"
                        id="admin.license.enterprise.upgrade"
                      />
                    </LoadingWrapper>
                  </button>
                </p>
                <p
                  className="upgrade-legal-terms"
                >
                  <injectIntl(FormattedMarkdownMessage)
                    defaultMessage=""
                    id="admin.license.enterprise.upgrade.accept-terms"
                  />
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="License: "
              id="admin.license.type"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <p>
                When using MatterFOSS Team Edition, the software is offered under a MatterFOSS MIT Compiled License. See MIT-COMPILED-LICENSE.md in your root install directory for details.
              </p>
              <p>

              </p>
              <p>
                See NOTICE.txt for information about open source software used in the system.
              </p>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Enterprise Edition License:"
              id="admin.license.enterprise-edition-license"
            />
          </label>
          <div
            className="col-sm-8 enterprise-license-text"
          >
            <div>
              <p>
                The MatterFOSS (EE) license (the “EE License”)
              </p>
              <p>
                Copyright (c) 2016-present MatterFOSS
              </p>
              <p>
                The subscription-only features of the MatterFOSS software and associated documentation files (the "Software") may only be used if you (and any entity that you represent) (i) have agreed to, and are in compliance with, the MatterFOSS Subscription Terms of Service, available at https://about.mattermost.com/enterprise-edition-terms/ (the “EE Terms”), and (ii) otherwise have a valid MatterFOSS subscription for the correct features, number of user seats and instances of MatterFOSS that you are running, accessing, or using.  You may, however, utilize the free version of the Software (with several features not enabled) under this license without a license key or subscription provided that you otherwise comply with the terms and conditions of this Agreement. Subject to the foregoing, except as explicitly permitted in the EE Terms, it is forbidden to copy, merge, modify, publish, distribute, sublicense, stream, perform, display, create derivative works of and/or sell the Software in either source or executable form without written agreement from Mattermost.  Notwithstanding anything to the contrary, free versions of the Software are provided “AS-IS” without indemnification, support, or warranties of any kind, expressed or implied. You assume all risk associated with any use of free versions of the Software.
              </p>
              <p>
                EXCEPT AS OTHERWISE SET FORTH IN A BINDING WRITTEN AGREEMENT BETWEEN YOU AND MATTERFOSS, THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
              </p>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/license_settings/LicenseSettings should match snapshot team edition build without license 1`] = `
<div
  className="wrapper--fixed"
>
  <FormattedAdminHeader
    defaultMessage="Edition and License"
    id="admin.license.title"
    values={Object {}}
  />
  <div
    className="admin-console__wrapper"
  >
    <div
      className="admin-console__content"
    >
      <form
        className="form-horizontal"
        role="form"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Edition: "
              id="admin.license.edition"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <p>
                MatterFOSS.
              </p>
              <div>
                <p>
                  <button
                    className="btn btn-primary"
                    onClick={[Function]}
                    type="button"
                  >
                    <LoadingWrapper
                      loading={false}
                      text={
                        <FormattedMessage
                          defaultMessage="Upgrading {percentage}%"
                          id="admin.license.enterprise.upgrading"
                          values={
                            Object {
                              "percentage": 0,
                            }
                          }
                        />
                      }
                    >
                      <FormattedMessage
                        defaultMessage="Upgrade to Enterprise Edition"
                        id="admin.license.enterprise.upgrade"
                      />
                    </LoadingWrapper>
                  </button>
                </p>
                <p
                  className="upgrade-legal-terms"
                >
                  <injectIntl(FormattedMarkdownMessage)
                    defaultMessage=""
                    id="admin.license.enterprise.upgrade.accept-terms"
                  />
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="License: "
              id="admin.license.type"
            />
          </label>
          <div
            className="col-sm-8"
          >
            <div>
              <p>
                When using MatterFOSS Team Edition, the software is offered under a MatterFOSS MIT Compiled License. See MIT-COMPILED-LICENSE.md in your root install directory for details.
              </p>
              <p>

              </p>
              <p>
                See NOTICE.txt for information about open source software used in the system.
              </p>
            </div>
          </div>
        </div>
        <div
          className="form-group"
        >
          <label
            className="control-label col-sm-4"
          >
            <FormattedMessage
              defaultMessage="Enterprise Edition License:"
              id="admin.license.enterprise-edition-license"
            />
          </label>
          <div
            className="col-sm-8 enterprise-license-text"
          >
            <div>
              <p>
                The MatterFOSS (EE) license (the “EE License”)
              </p>
              <p>
                Copyright (c) 2016-present MatterFOSS
              </p>
              <p>
                The subscription-only features of the MatterFOSS software and associated documentation files (the "Software") may only be used if you (and any entity that you represent) (i) have agreed to, and are in compliance with, the MatterFOSS Subscription Terms of Service, available at https://about.mattermost.com/enterprise-edition-terms/ (the “EE Terms”), and (ii) otherwise have a valid MatterFOSS subscription for the correct features, number of user seats and instances of MatterFOSS that you are running, accessing, or using.  You may, however, utilize the free version of the Software (with several features not enabled) under this license without a license key or subscription provided that you otherwise comply with the terms and conditions of this Agreement. Subject to the foregoing, except as explicitly permitted in the EE Terms, it is forbidden to copy, merge, modify, publish, distribute, sublicense, stream, perform, display, create derivative works of and/or sell the Software in either source or executable form without written agreement from Mattermost.  Notwithstanding anything to the contrary, free versions of the Software are provided “AS-IS” without indemnification, support, or warranties of any kind, expressed or implied. You assume all risk associated with any use of free versions of the Software.
              </p>
              <p>
                EXCEPT AS OTHERWISE SET FORTH IN A BINDING WRITTEN AGREEMENT BETWEEN YOU AND MATTERFOSS, THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
              </p>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
